# Copyright (c) 2022-2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

group("fuzztest") {
  testonly = true

  deps = [
    "authacl_fuzzer:fuzztest",
    "authcredential_fuzzer:fuzztest",
    "authenticatedevice_fuzzer:fuzztest",
    "authenticatedeviceservice_fuzzer:fuzztest",
    "authenticatedeviceserviceimpl_fuzzer:fuzztest",
    "authpinauth_fuzzer:fuzztest",
    "dmauthmanager_fuzzer:fuzztest",
    "dmauthmanagerv2_fuzzer:fuzztest",
    "dmanonyous_fuzzer:fuzztest",
    "dmcommoneventmanager_fuzzer:fuzztest",
    "dmcredentialimpl_fuzzer:fuzztest",
    "dmfreezeprocess_fuzzer:fuzztest",
    "dmnegotiateprocess_fuzzer:fuzztest",
    "generateencrypteduuid_fuzzer:fuzztest",
    "getdeviceinfo_fuzzer:fuzztest",
    "hichainconnector_fuzzer:fuzztest",
    "ondatareceived_fuzzer:fuzztest",
    "ondatareceivedv2_fuzzer:fuzztest",
    "onerror_fuzzer:fuzztest",
    "onfinish_fuzzer:fuzztest",
    "onrequest_fuzzer:fuzztest",
    "pinauth_fuzzer:fuzztest",
    "pinauthui_fuzzer:fuzztest",
    "pinholder_fuzzer:fuzztest",
  ]
}
