# Copyright (c) 2022-2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

group("fuzztest") {
  testonly = true

  deps = [
    "authconfirm_fuzzer:fuzztest",
    "authmanager_fuzzer:fuzztest",
    "authmessageprocessor_fuzzer:fuzztest",
    "cryptomgr_fuzzer:fuzztest",
    "devicediscovery_fuzzer:fuzztest",
    "devicelist_fuzzer:fuzztest",
    "devicelistrefresh_fuzzer:fuzztest",
    "devicemanagernotify_fuzzer:fuzztest",
    "devicemanagerservice_fuzzer:fuzztest",
    "devicenamemanager_fuzzer:fuzztest",
    "devicenamemanagerone_fuzzer:fuzztest",
    "deviceprofileconnector_fuzzer:fuzztest",
    "devicepublish_fuzzer:fuzztest",
    "dmauthattestcommon_fuzzer:fuzztest",
    "dmcommtool_fuzzer:fuzztest",
    "dmcommtooltwo_fuzzer:fuzztest",
    "dmtransport_fuzzer:fuzztest",
    "dmtransportmsg_fuzzer:fuzztest",
    "dpinitcallback_fuzzer:fuzztest",
    "getlocaldeviceinfo_fuzzer:fuzztest",
    "gettrusteddevicelistservice_fuzzer:fuzztest",
    "getudidbynetworkid_fuzzer:fuzztest",
    "getuuidbynetworkid_fuzzer:fuzztest",
    "initdevicemanager_fuzzer:fuzztest",
    "ipcclientmanager_fuzzer:fuzztest",
    "ipccmdregister_fuzzer:fuzztest",
    "ipcserverclientproxy_fuzzer:fuzztest",
    "ipcserverlistener_fuzzer:fuzztest",
    "ipcserverstub_fuzzer:fuzztest",
    "notifyevent_fuzzer:fuzztest",
    "registerdevicemanagerfacallback_fuzzer:fuzztest",
    "registerdevstatecallback_fuzzer:fuzztest",
    "setuseroperation_fuzzer:fuzztest",
    "shiftlnngeardeviceservice_fuzzer:fuzztest",
    "unauthenticatedevice_fuzzer:fuzztest",
    "unregisterdevicemanagerfacallback_fuzzer:fuzztest",
  ]
}
