# Copyright (c) 2022-2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

group("fuzztest") {
  testonly = true

  deps = [
    "onsessionopened_fuzzer:fuzztest",
    "onsoftbusdeviceinfochanged_fuzzer:fuzztest",
    "onsoftbusdeviceoffline_fuzzer:fuzztest",
    "onsoftbusdeviceonline_fuzzer:fuzztest",
    "onsoftbuslistenerdevicefound_fuzzer:fuzztest",
    "publishsoftbuslnn_fuzzer:fuzztest",
    "refreshsoftbuslnn_fuzzer:fuzztest",
    "softbusconnector_fuzzer:fuzztest",
    "softbusconnectorcommon_fuzzer:fuzztest",
    "softbusconnectorpublish_fuzzer:fuzztest",
    "softbusconnectorstate_fuzzer:fuzztest",
    "softbusconnectorstatic_fuzzer:fuzztest",
    "softbuslistener_fuzzer:fuzztest",
    "softbuslistenergetlocaldeviceinfo_fuzzer:fuzztest",
    "softbussession_fuzzer:fuzztest",
    "softbussessionobject_fuzzer:fuzztest",
    "stoprefreshsoftbuslnn_fuzzer:fuzztest",
  ]
}
